--- a/public/top/top.html
+++ b/public/top/top.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>マッサージ会社</title>
-    <link rel="stylesheet" href="style.scss">
+    <link rel="stylesheet" href="top.scss">
   </head>
   <body>
     <header>
       <ul>
         <li>マッサージ会社</li>
-        <li><a href="login.html">ログイン</a></li>
+        <li><a href="../login/login.html">ログイン</a></li>
       </ul>
     </header>
   </body>
